UPDATE: Updated css class for dropdown

--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@
     font-size: medium;
   }
   
-  .dropdown-menu {
+  .category-dropdown-menu {
     width: 100%;
     padding: 20px 20px;
     border: 1px solid #ccc;
